dnl
dnl  Maitreya
dnl
dnl  File: configure.in
dnl
dnl

AC_INIT(maitreya, 7.1)
AM_INIT_AUTOMAKE( AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION )

dnl ACLOCAL_AMFLAGS = -I m4

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_PROG_YACC
AM_PROG_LEX

dnl AM_YFLAGS = -d 

AM_CONFIG_HEADER(config.h)
AC_HEADER_STDC

AM_GNU_GETTEXT([external])

debug=false
AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
	yes) debug=true ;;
	no)  debug=false ;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl CFLAGS=
dnl CPPFLAGS=
dnl CXXFLAGS=
if test "$debug" == "true"
then
	CFLAGS="-g"
	CPPFLAGS="-g"
	CXXFLAGS="-g"
fi

dnl
dnl Fontconfig is implicitly needed by wxpdfdoc on UNIX and MacOS
dnl
AC_LIB_HAVE_LINKFLAGS([fontconfig],,[#include <fontconfig/fontconfig.h>],[ FcConfig* fc = FcInitLoadConfigAndFonts();])
if test "$HAVE_LIBFONTCONFIG" == "no"; then
AC_MSG_ERROR([
libfontconfig and development headers must be installed on your system.
You can specify the path of an unsual fontconfig installation with the
configure option --with-libfontconfig-prefix[=DIR] (e.g. /usr/X11).
])
fi

dnl
dnl  Check for GUI toolkit wxWidgets
dnl
AM_OPTIONS_WXCONFIG

AM_PATH_WXCONFIG(2.8.0, wxWin=1)
if test "$wxWin" != 1; then
AC_MSG_ERROR([
wxWindows must be installed on your system
but wx-config script could not be found.

Please check that wx-config is in path, the directory
where wxWindows libraries are installed (returned by
'wx-config --libs' command) is in LD_LIBRARY_PATH or
equivalent variable and wxWindows version is 2.8.0 or above.
])
fi

AC_OUTPUT( Makefile po/Makefile.in
	debian/Makefile
	src/Makefile
	src/base/Makefile
	src/db/Makefile
	src/swe/Makefile
	src/jyotish/Makefile
	src/gui/Makefile
	src/pics/Makefile
	src/pdf/Makefile
	src/atlas/Makefile
	src/icons/Makefile
	src/fonts/Makefile
	src/xml/Makefile
	src/xml/yogas/Makefile
	src/dialogs/Makefile
)

echo
echo "------------------------------------------------------"
echo
echo "  Configuration successful!"
echo
echo "General options"
echo "   Base directory:   $prefix"
echo "   Debugging     :   $debug"
echo
echo "wxWidgets options"
echo "   wx version    :   $WX_VERSION"
echo "   wx-config     :   $WX_CONFIG_WITH_ARGS"
echo
echo "You can type 'make' now"
echo
echo "------------------------------------------------------"
echo




