EXTRA_DIST = ashtakavarga.ico chart.ico chart9.ico config.ico dasa.ico edit.ico \
	ephem.ico hora.ico maitreya.ico mview.ico partner.ico sbc.ico \
	graphicaldasa.ico shadbala.ico solar.ico sview.ico text.ico transit.ico \
	wchart.ico world.ico eclipse.ico uranian.ico varga.ico yoga.ico yogaeditor.ico  \
	maitreya.icns

	clean:
	rm -f *~ *.bak

