
EXTRA_DIST = ashtakavarga.xpm chart10.xpm chart12.xpm chart16.xpm chart20.xpm chart24.xpm chart27.xpm \
	chart2.xpm chart30.xpm chart3.xpm chart40.xpm chart45.xpm chart4.xpm chart60.xpm chart6.xpm chart7.xpm chart8.xpm \
	chart9.xpm chart144.xpm chart108.xpm chartb.xpm chart.xpm close.xpm config.xpm dasa_folder_e.xpm dasa_folder.xpm \
	dasatree1e.xpm dasatree1.xpm dasatree2e.xpm dasatree2.xpm dasatree3e.xpm dasatree3.xpm dasatree4e.xpm dasatree4.xpm \
	dasatree5e.xpm dasatree5.xpm dasa.xpm nav_down.xpm eclipse.xpm edit.xpm ephem.xpm goto.xpm \
	graphicaldasa.xpm help.xpm hora.xpm info.xpm nav_left.xpm mahadasa_e.xpm mahadasa.xpm maitreya.xpm mview.xpm \
	new.xpm now.xpm open.xpm partner.xpm piebald.png print.xpm quickprint.xpm quit.xpm rainbow.png nav_right.xpm saveas.xpm \
	save.xpm sbc.xpm separator.xpm shadbala.xpm solar.xpm sview.xpm text.xpm transit.xpm nav_up.xpm uranian.xpm \
	varga.xpm wchart.xpm world.xpm yoga.xpm maitreya64x64.xpm yogaeditor.xpm copy.xpm 


pkgdatadir = ${datarootdir}/maitreya7/pics
dist_pkgdata_DATA = logo.jpg madera.jpg maitreya.xpm maitreya64x64.xpm marble.jpg piebald.png rainbow.png stars.jpg 

logopicdir = $(datarootdir)/pixmaps
logopic_DATA = maitreya.xpm


clean:
	rm -f *~ *.bak

